      <somechild> was pending.

    - setting the relation()-level order by to a column in the
      many-to-many "secondary" table will now work with eager 
      loading, previously the "order by" wasn't aliased against
      the secondary table's alias.
      
- dialects
    - Invalid SQLite connection URLs now raise an error.

    - postgres TIMESTAMP renders correctly [ticket:981]

0.4.3
------
- sql
    - Added "schema.DDL", an executable free-form DDL statement.
      DDLs can be executed in isolation or attached to Table or
      MetaData instances and executed automatically when those
      objects are created and/or dropped.

    - Table columns and constraints can be overridden on a an
      existing table (such as a table that was already reflected)
      using the 'useexisting=True' flag, which now takes into
      account the arguments passed along with it.

    - Added a callable-based DDL events interface, adds hooks
      before and after Tables and MetaData create and drop.

    - Added generative where(<criterion>) method to delete() and
      update() constructs which return a new object with criterion
      joined to existing criterion via AND, just like
      select().where().

    - Added "ilike()" operator to column operations.  Compiles to
      ILIKE on postgres, lower(x) LIKE lower(y) on all
      others. [ticket:727]

    - Added "now()" as a generic function; on SQLite, Oracle
      and MSSQL compiles as "CURRENT_TIMESTAMP"; "now()" on
      all others. [ticket:943]

    - The startswith(), endswith(), and contains() operators now
      concatenate the wildcard operator with the given operand in
      SQL, i.e. "'%' || <bindparam>" in all cases, accept
      text('something') operands properly [ticket:962]

    - cast() accepts text('something') and other non-literal
      operands properly [ticket:962]

    - fixed bug in result proxy where anonymously generated
      column labels would not be accessible using their straight